--- a/examples/index.html
+++ b/examples/index.html
@@ -26,10 +26,12 @@
     <a href="basic_video/index.html">Stereoscopic video</a>
     <a href="basic_image/index.html">Stereoscopic image</a>
 
-    <div class="github-fork-ribbon-wrapper right">
-      <div class="github-fork-ribbon" style="background: #3482AA">
-        <a href="https://github.com/oscarmarinmiro/aframe-stereo-component">Fork me on GitHub</a>
-      </div>
-    </div>
+    <!--<div class="github-fork-ribbon-wrapper right">-->
+    <!--  <div class="github-fork-ribbon" style="background: #3482AA">-->
+    <!--    <a href="https://github.com/oscarmarinmiro/aframe-stereo-component">Fork me on GitHub</a>-->
+    <!--  </div>-->
+    <!--</div>-->
+    
+    
   </body>
 </html>
