--- a/examples/my_example/index.html
+++ b/examples/my_example/index.html
@@ -1,27 +1,45 @@
 <html>
+
 <head>
-  <title>My A-Frame Scene</title>
-        <script src="../build.js"></script>
+    <title>My A-Frame Scene</title>
+    <script src="../build.js"></script>
 
 </head>
+
 <body>
-   <a-scene>
-      <a-sky color="#FFF"></a-sky>
-      <a-light color="#333" position="0 5 0" type="ambient" intensity="0.2"></a-light>
-      <a-light type="point" color="#EEE" intensity="1.0" position="3 3 10"></a-light>
+    <a-scene>
+        <video id="Mary" loop src="textures/MaryOculus.mp4">
+          <source src="textures/MaryOculus.mp4" type="video/mp4"/>
+      </video>
 
-      <!-- 'left' eye entities will pass through the camera in non-VR mode -->
+        <a-entity geometry="primitive: sphere;
+                      radius: 100;
+                      segmentsWidth: 64;
+                      segmentsHeight: 64;" material="shader: flat; src:#Mary;" scale="-1 1 1" stereo="eye:left">
+        </a-entity>
 
-      <a-camera position="0 0 0" stereocam="eye:left;">
-          <a-cursor color="black"></a-cursor>
-      </a-camera>
+        <a-entity geometry="primitive: sphere;
+                      radius: 100;
+                      segmentsWidth: 64;
+                      segmentsHeight: 64;" material="shader: flat; src:#Mary;" scale="-1 1 1" stereo="eye:right">
+        </a-entity>
 
-      <!-- in VR mode, the first box is displayed only in the left eye, the second one in the right eye -->
+        <a-light color="#333" position="0 5 0" type="ambient" intensity="0.2"></a-light>
+        <a-light type="point" color="#EEE" intensity="1.0" position="3 3 10"></a-light>
 
-      <a-entity geometry="primitive: plane; width: 1.6; height: 0.9" material="src: /examples/my_example/3d_test_L.png" position="0 0 -3" stereo="eye:left"></a-entity>
-      <a-entity geometry="primitive: plane; width: 1.6; height: 0.9" material="src: /examples/my_example/3d_test_R.png" position="0 0 -3" stereo="eye:right"></a-entity>
+        <!-- 'left' eye entities will pass through the camera in non-VR mode -->
 
-   </a-scene>
+        <a-camera position="0 0 0" stereocam="eye:left;">
+            <a-cursor color="black"></a-cursor>
+        </a-camera>
 
- </body>
- </html>
+        <!-- in VR mode, the first box is displayed only in the left eye, the second one in the right eye -->
+
+        <a-entity geometry="primitive: plane; width: 1.6; height: 0.9" material="src: /examples/my_example/textures/3d_test_L.png" position="0 0 -3" stereo="eye:left"></a-entity>
+        <a-entity geometry="primitive: plane; width: 1.6; height: 0.9" material="src: /examples/my_example/textures/3d_test_R.png" position="0 0 -3" stereo="eye:right"></a-entity>
+
+    </a-scene>
+
+</body>
+
+</html>
