--- a/examples/my_example/index.html
+++ b/examples/my_example/index.html
@@ -7,10 +7,27 @@
 </head>
 
 <body>
+    <script src="https://unpkg.com/aframe-look-at-component@0.5.1/dist/aframe-look-at-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-animation-component@^5.1.2/dist/aframe-animation-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-event-set-component@^4.0.0/dist/aframe-event-set-component.min.js"></script>
+
+    <script src="arrow-key-rotation.js"></script>
+    <script src="play-on-window-click.js"></script>
+    <script src="toggle-play-on-window-click.js"></script>
+    <script src="play-on-vrdisplayactivate-or-enter-vr.js"></script>
+    <script src="hide-once-playing.js"></script>
+    <script src="get-real-position.js"></script>
+    <script src="reset-video-on-click.js"></script>
+    <script src="play-video-on-click.js"></script>
+    <script src="zoom-in-on-click.js"></script>
+    <script src="zoom-out-on-click.js"></script>
+    <script src="replay-on-click.js"></script>
+    <script src="scip-ahead-on-click.js"></script>
+
     <a-scene>
         <video id="Mary" loop src="textures/MaryOculus.mp4">
           <source src="textures/MaryOculus.mp4" type="video/mp4"/>
-      </video>
+        </video>
 
         <a-entity geometry="primitive: sphere;
                       radius: 100;
@@ -29,16 +46,38 @@
 
         <!-- 'left' eye entities will pass through the camera in non-VR mode -->
 
-        <a-camera position="0 0 0" stereocam="eye:left;">
-            <a-cursor color="black"></a-cursor>
+        <a-camera position="0 0 0" stereocam="eye:left;" id='camera'>
+            <a-entity animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1" animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1500; from: 1 1 1; to: 0.1 0.1 0.1" cursor="fuse: true;"
+                material="color: black; shader: flat" position="0 0 -3" geometry="primitive: ring; radiusInner: 0.06; radiusOuter: 0.09" id="cursor"></a-entity>
+            <a-entity id='countdown' visible='false' position='0 -1.5 -3' text="value: 4; color: white; lineHeight: 80; wrapCount: 5; align: center">
+            </a-entity>
         </a-camera>
-
-        <!-- in VR mode, the first box is displayed only in the left eye, the second one in the right eye -->
 
         <a-entity geometry="primitive: plane; width: 1.6; height: 0.9" material="src: /examples/my_example/textures/3d_test_L.png" position="0 0 -3" stereo="eye:left"></a-entity>
         <a-entity geometry="primitive: plane; width: 1.6; height: 0.9" material="src: /examples/my_example/textures/3d_test_R.png" position="0 0 -3" stereo="eye:right"></a-entity>
 
+        <a-entity geometry='primitive: circle; radius: 0.2' position='0 -3.1 0' id="controlsCenter" rotation='-90 0 0' visible='false'>
+            <a-entity geometry='primitive: circle; radius: 0.3' position='0.7 0.4 0' scip-ahead-on-click></a-entity>
+            <a-entity geometry='primitive: circle; radius: 0.3' position='0 0.8 0' play-on-click></a-entity>
+            <a-entity geometry='primitive: circle; radius: 0.3' position='0.7 -0.4 0' zoom-in-on-click></a-entity>
+            <a-entity geometry='primitive: circle; radius: 0.3' position='-0.7 -0.4 0' zoom-out-on-click></a-entity>
+            <a-entity geometry='primitive: circle; radius: 0.3' position='-0.7 0.4 0' replay-on-click></a-entity>
+            <a-entity geometry='primitive: circle; radius: 0.3' position='0 -0.8 0' reset-on-click="event: anEvent; message: Hello, Metaverse!"></a-entity>
+        </a-entity>
+
+        <a-entity geometry='primitive: ring; radiusInner: 5.5; radiusOuter: 6' rotation='-90 0 0' position='0 -3 0' material='opacity: 0.5' id='ring'></a-entity>
+
     </a-scene>
+
+    <script>
+        document.querySelector('#ring').addEventListener('click', function(e) {
+            console.log('I was clicked at: ', e.detail.intersection.point);
+            var controls = document.querySelector('#controlsCenter');
+            controls.setAttribute('position', e.detail.intersection.point);
+            controls.setAttribute('visible', 'true');
+            controls.setAttribute('look-at', '[camera]');
+        });
+    </script>
 
 </body>
 
