controls are styled

--- a/examples/my_example/index.html
+++ b/examples/my_example/index.html
@@ -79,11 +79,11 @@
             controls.setAttribute('look-at', '[camera]');
         });
         
-        document.querySelector('#controlsCenter').addEventListener('click', function(e){
-            console.log(e);
-           e.detail.target.setAttribute('visible', false);
-           document.querySelector('#ring').setAttribute('geometry', 'radiusInner: 5.5');
-        });
+        // document.querySelector('#controlsCenter').addEventListener('click', function(e){
+        //     console.log(e);
+        //   e.detail.target.setAttribute('visible', false);
+        //   document.querySelector('#ring').setAttribute('geometry', 'radiusInner: 5.5');
+        // }, true);
     </script>
 
 </body>
