--- a/examples/my_example/index.html
+++ b/examples/my_example/index.html
@@ -12,8 +12,8 @@
     <script src="https://unpkg.com/aframe-event-set-component@^4.0.0/dist/aframe-event-set-component.min.js"></script>
 
     <script src="arrow-key-rotation.js"></script>
-    <script src="play-on-window-click.js"></script>
-    <script src="toggle-play-on-window-click.js"></script>
+    <!--<script src="play-on-window-click.js"></script>-->
+    <!--<script src="toggle-play-on-window-click.js"></script>-->
     <script src="play-on-vrdisplayactivate-or-enter-vr.js"></script>
     <script src="hide-once-playing.js"></script>
     <script src="get-real-position.js"></script>
