--- a/examples/index.html
+++ b/examples/index.html
@@ -21,10 +21,8 @@
     </style>
   </head>
   <body>
-    <h1>A-Frame Stereo Component</h1>
-    <a href="two_boxes/index.html">Two boxes example, one for each eye</a>
-    <a href="basic_video/index.html">Stereoscopic video</a>
-    <a href="basic_image/index.html">Stereoscopic image</a>
+    <h1>Choose a video from our wide array! :D</h1>
+    <a href="basic_image/index.html">The only video we have</a>
 
     <!--<div class="github-fork-ribbon-wrapper right">-->
     <!--  <div class="github-fork-ribbon" style="background: #3482AA">-->
